tests/errors/generic_constraint_missing.orus
fn add<T>(a: T, b: T) -> T {
    return a + b
}

fn main() {
    let r = add(1, 2)
    print(r)
}
